--- a/exampleSite/content/projects/bbva/05_Definitions_of_Successv2.html
+++ b/exampleSite/content/projects/bbva/05_Definitions_of_Successv2.html
@@ -1098,6 +1098,7 @@ the original variables (including a missing dummy).</li>
 <li>Took out “Business situation” from predicting models.</li>
 <li>Tested taking out “cluster” variable for entire sample prediction/
 taking out definition of success variables.</li>
+<li>Added a love plot beside varImp plots.</li>
 </ul></li>
 </ul>
 </div>
