--- a/exampleSite/content/projects/bbva/05_Definitions_of_Successv2.html
+++ b/exampleSite/content/projects/bbva/05_Definitions_of_Successv2.html
@@ -1082,7 +1082,7 @@ margin-left: 0 !important;
          <h4 class="author"><em>Magdalena Bennett<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a></em></h4>
             <h4 class="author"><em>William Fuchs<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a></em></h4>
             <h4 class="author"><em>Jaime Millán<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a></em></h4>
-            <h4 class="date"><em>September 27th, 2024</em></h4>
+            <h4 class="date"><em>October 3rd, 2024</em></h4>
       
       
    
@@ -1116,11 +1116,14 @@ avoid high means for standardization.</li>
 <li>Checked ratio of resources needed and increase of income
 (transformed to logs)</li>
 </ul></li>
+<li><strong>10/03/24</strong>:
+<ul>
+<li>Changed max and min income to percentile (1-100).</li>
+<li>Changed ratio of investment and income growth to percentile
+(1-100).</li>
+<li>Included <code>cluster</code> variable in the model selection.</li>
+</ul></li>
 </ul>
-<p>= <strong>10/03/24</strong>: - Changed max and min income to
-percentile (1-100). - Changed ratio of investment and income growth to
-percentile (1-100). - Included <code>cluster</code> variable in the
-model selection.</p>
 </div>
 <div id="definition-of-success" class="section level1">
 <h1>Definition of Success</h1>
