--- a/exampleSite/content/files/SCI_exec_summary.html
+++ b/exampleSite/content/files/SCI_exec_summary.html
@@ -3060,10 +3060,21 @@ src: url(data:font/ttf;base64,AAEAAAAQAQAABAAAR0RFRgIdA+0AAAEcAAAAHEdQT1MMWgLpAA
 body {font-family: 'Jost', sans-serif;font-size: 10pt;}h1{font-family: 'Jost', sans-serif;font-size: 14pt;}h2, h3, h4, h5, h6 {font-family: 'Jost', sans-serif;font-size: 12pt;}@page {size: letter;margin: 1in;}body {margin: 0;padding: 0;}.page {page-break-after: always;width: 8.5in;height: 11in;box-sizing: border-box;padding: 1in;margin: 0 auto;background: white;border: 1px solid #ccc;box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);}.page:last-child {page-break-after: auto;}body {line-height: 1; }ul, ol {margin-top: 0;margin-bottom: 0;padding-left: 0.5em; }li {margin-bottom: 0.3em; }h1, h2, h3, h4, h5, h6 {margin-top: 0.2em;margin-bottom: 0.2em;}</style>
 </head>
 
-<body class="fullcontent">
+<body>
 
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
-
+<div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+  <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Table of contents</h2>
+   
+  <ul>
+  <li><a href="#survey" id="toc-survey" class="nav-link active" data-scroll-target="#survey">Survey</a></li>
+  <li><a href="#reasons-for-nonattendance" id="toc-reasons-for-nonattendance" class="nav-link" data-scroll-target="#reasons-for-nonattendance">Reasons for (Non)Attendance</a></li>
+  <li><a href="#experience-at-acic" id="toc-experience-at-acic" class="nav-link" data-scroll-target="#experience-at-acic">Experience at ACIC</a></li>
+  <li><a href="#other-takeways" id="toc-other-takeways" class="nav-link" data-scroll-target="#other-takeways">Other Takeways</a></li>
+  </ul>
+</nav>
+</div>
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
