--- a/exampleSite/content/projects/bbva/06_exitosos_subjetivos.html
+++ b/exampleSite/content/projects/bbva/06_exitosos_subjetivos.html
@@ -1094,12 +1094,12 @@ margin-left: 0 !important;
 the local offices – subjective success – with respect to the rest of the
 sample. Even though we only observe NA “successful” micro-entrepreneurs
 based on the offices recommendations, we observe that, in general, they
-are more likely to self-report business growth, both in terms of sales
-and number of workers. Additionally, we can see some differences in
-asset growth (whether their assets on their last observed loan were
-greater than their assets on their first observed loan); however, this
-result should be considered carefully, as there is an important
-proportion of missing data.</p>
+are more likely to self-report significant business growth, both in
+terms of sales and number of workers. Additionally, we can see some
+differences in asset growth (whether their assets on their last observed
+loan were greater than their assets on their first observed loan);
+however, this result should be considered carefully, as there is an
+important proportion of missing data.</p>
 <table class="table table table-hover lightable-paper" style="color: black; width: auto !important; margin-left: auto; margin-right: auto; color: black; margin-left: auto; margin-right: auto; color: black; font-family: &quot;Arial Narrow&quot;, arial, helvetica, sans-serif; margin-left: auto; margin-right: auto;">
 <thead>
 <tr>
@@ -1190,7 +1190,7 @@ Significant business growth (survey)
 </tr>
 <tr>
 <td style="text-align:left;">
-Loan 1 &gt; Loan 0
+Business growth (survey)
 </td>
 <td style="text-align:right;">
 0.444
@@ -1213,7 +1213,7 @@ Loan 1 &gt; Loan 0
 </tr>
 <tr>
 <td style="text-align:left;">
-Loan (miss)
+Loan 1 &gt; Loan 0
 </td>
 <td style="text-align:right;">
 0.010
@@ -1236,7 +1236,7 @@ Loan (miss)
 </tr>
 <tr>
 <td style="text-align:left;">
-Asset 1 &gt; Asset 0
+Loan (miss)
 </td>
 <td style="text-align:right;">
 0.400
@@ -1259,7 +1259,7 @@ Asset 1 &gt; Asset 0
 </tr>
 <tr>
 <td style="text-align:left;">
-Asset (miss)
+Asset 1 &gt; Asset 0
 </td>
 <td style="text-align:right;">
 0.140
@@ -1282,7 +1282,7 @@ Asset (miss)
 </tr>
 <tr>
 <td style="text-align:left;">
-Surplus 1 &gt; Surplus 0
+Asset (miss)
 </td>
 <td style="text-align:right;">
 0.493
@@ -1305,7 +1305,7 @@ Surplus 1 &gt; Surplus 0
 </tr>
 <tr>
 <td style="text-align:left;">
-Surplus (miss)
+Surplus 1 &gt; Surplus 0
 </td>
 <td style="text-align:right;">
 0.064
@@ -1328,7 +1328,7 @@ Surplus (miss)
 </tr>
 <tr>
 <td style="text-align:left;">
-Days payment delayed - last loan
+Surplus (miss)
 </td>
 <td style="text-align:right;">
 0.926
