--- a/exampleSite/content/projects/bbva/06_exitosos_subjetivos.html
+++ b/exampleSite/content/projects/bbva/06_exitosos_subjetivos.html
@@ -1092,7 +1092,7 @@ margin-left: 0 !important;
 <h2>Subjective measure of success</h2>
 <p>We compare some characteristics of successful clients identified by
 the local offices – subjective success – with respect to the rest of the
-sample. Even though we only observe NA “successful” micro-entrepreneurs
+sample. Even though we only observe 45 “successful” micro-entrepreneurs
 based on the offices recommendations, we observe that, in general, they
 are more likely to self-report significant business growth, both in
 terms of sales and number of workers. Additionally, we can see some
