--- a/exampleSite/content/projects/bbva/06_exitosos_subjetivos.html
+++ b/exampleSite/content/projects/bbva/06_exitosos_subjetivos.html
@@ -1094,12 +1094,12 @@ margin-left: 0 !important;
 the local offices – subjective success – with respect to the rest of the
 sample. Even though we only observe 45 “successful” micro-entrepreneurs
 based on the offices recommendations, we observe that, in general, they
-are more likely to self-report significant business growth, both in
-terms of sales and number of workers. Additionally, we can see some
-differences in asset growth (whether their assets on their last observed
-loan were greater than their assets on their first observed loan);
-however, this result should be considered carefully, as there is an
-important proportion of missing data.</p>
+are more likely to self-report business growth, both in terms of sales
+and number of workers. Additionally, we can see some differences in
+asset growth (whether their assets on their last observed loan were
+greater than their assets on their first observed loan); however, this
+result should be considered carefully, as there is an important
+proportion of missing data.</p>
 <table class="table table table-hover lightable-paper" style="color: black; width: auto !important; margin-left: auto; margin-right: auto; color: black; margin-left: auto; margin-right: auto; color: black; font-family: &quot;Arial Narrow&quot;, arial, helvetica, sans-serif; margin-left: auto; margin-right: auto;">
 <thead>
 <tr>
@@ -1107,7 +1107,7 @@ important proportion of missing data.</p>
 </th>
 <th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2">
 <div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
-No exitoso subjetivo (N=1732)
+No exitoso subjetivo (N=2075)
 </div>
 </th>
 <th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2">
@@ -1147,10 +1147,10 @@ p
 Growth in workers (survey)
 </td>
 <td style="text-align:right;">
-0.252
+0.268
 </td>
 <td style="text-align:right;">
-0.434
+0.443
 </td>
 <td style="text-align:right;">
 0.356
@@ -1159,10 +1159,10 @@ Growth in workers (survey)
 0.484
 </td>
 <td style="text-align:right;">
-0.103
+0.087
 </td>
 <td style="text-align:right;">
-0.164
+0.238
 </td>
 </tr>
 <tr>
@@ -1170,10 +1170,10 @@ Growth in workers (survey)
 Significant business growth (survey)
 </td>
 <td style="text-align:right;">
-0.208
+0.212
 </td>
 <td style="text-align:right;">
-0.406
+0.409
 </td>
 <td style="text-align:right;">
 0.356
@@ -1182,10 +1182,10 @@ Significant business growth (survey)
 0.484
 </td>
 <td style="text-align:right;">
-0.148
+0.144
 </td>
 <td style="text-align:right;">
-0.048
+0.054
 </td>
 </tr>
 <tr>
@@ -1193,10 +1193,33 @@ Significant business growth (survey)
 Business growth (survey)
 </td>
 <td style="text-align:right;">
-0.444
+0.596
 </td>
 <td style="text-align:right;">
-0.497
+0.491
+</td>
+<td style="text-align:right;">
+0.756
+</td>
+<td style="text-align:right;">
+0.435
+</td>
+<td style="text-align:right;">
+0.160
+</td>
+<td style="text-align:right;">
+0.019
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Loan 1 &gt; Loan 0
+</td>
+<td style="text-align:right;">
+0.451
+</td>
+<td style="text-align:right;">
+0.498
 </td>
 <td style="text-align:right;">
 0.442
@@ -1205,21 +1228,21 @@ Business growth (survey)
 0.502
 </td>
 <td style="text-align:right;">
--0.002
+-0.010
 </td>
 <td style="text-align:right;">
-0.978
+0.903
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-Loan 1 &gt; Loan 0
+Loan (miss)
 </td>
 <td style="text-align:right;">
-0.010
+0.009
 </td>
 <td style="text-align:right;">
-0.101
+0.095
 </td>
 <td style="text-align:right;">
 0.044
@@ -1228,18 +1251,18 @@ Loan 1 &gt; Loan 0
 0.208
 </td>
 <td style="text-align:right;">
-0.034
+0.035
 </td>
 <td style="text-align:right;">
-0.280
+0.263
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-Loan (miss)
+Asset 1 &gt; Asset 0
 </td>
 <td style="text-align:right;">
-0.400
+0.401
 </td>
 <td style="text-align:right;">
 0.490
@@ -1251,21 +1274,21 @@ Loan (miss)
 0.496
 </td>
 <td style="text-align:right;">
-0.206
+0.205
 </td>
 <td style="text-align:right;">
-0.024
+0.025
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-Asset 1 &gt; Asset 0
+Asset (miss)
 </td>
 <td style="text-align:right;">
-0.140
+0.259
 </td>
 <td style="text-align:right;">
-0.347
+0.438
 </td>
 <td style="text-align:right;">
 0.267
@@ -1274,18 +1297,18 @@ Asset 1 &gt; Asset 0
 0.447
 </td>
 <td style="text-align:right;">
-0.126
+0.007
 </td>
 <td style="text-align:right;">
-0.066
+0.913
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-Asset (miss)
+Surplus 1 &gt; Surplus 0
 </td>
 <td style="text-align:right;">
-0.493
+0.491
 </td>
 <td style="text-align:right;">
 0.500
@@ -1297,21 +1320,21 @@ Asset (miss)
 0.499
 </td>
 <td style="text-align:right;">
--0.101
+-0.100
 </td>
 <td style="text-align:right;">
-0.344
+0.350
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-Surplus 1 &gt; Surplus 0
+Surplus (miss)
 </td>
 <td style="text-align:right;">
-0.064
+0.070
 </td>
 <td style="text-align:right;">
-0.244
+0.255
 </td>
 <td style="text-align:right;">
 0.489
@@ -1320,7 +1343,7 @@ Surplus 1 &gt; Surplus 0
 0.506
 </td>
 <td style="text-align:right;">
-0.425
+0.419
 </td>
 <td style="text-align:right;">
 0.000
@@ -1328,13 +1351,13 @@ Surplus 1 &gt; Surplus 0
 </tr>
 <tr>
 <td style="text-align:left;">
-Surplus (miss)
+Days payment delayed - last loan
 </td>
 <td style="text-align:right;">
-0.926
+0.937
 </td>
 <td style="text-align:right;">
-3.517
+3.397
 </td>
 <td style="text-align:right;">
 1.190
@@ -1343,10 +1366,10 @@ Surplus (miss)
 3.167
 </td>
 <td style="text-align:right;">
-0.264
+0.253
 </td>
 <td style="text-align:right;">
-0.709
+0.720
 </td>
 </tr>
 </tbody>
